<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        style="@style/EstiloTexto"
        android:text="@string/type_layout"
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="@dimen/titulo" />

    <EditText
        style="@style/EstiloTexto"
        android:textSize="@dimen/titulo"
        android:id="@+id/editText"
        android:text="@string/game"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="30dp"
        android:layout_marginTop="60dp">

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/start"
            android:id="@+id/btnStart"
            android:textSize="@dimen/boton" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/settings"
            android:id="@+id/btnConfig"
            android:textSize="@dimen/boton" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/ranking"
            android:id="@+id/btnRanking"
            android:textSize="@dimen/boton" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/about"
            android:id="@+id/btnAbout"
            android:textSize="@dimen/boton" />

        <Button
            style="@style/EstiloTexto.Botones"
            android:text="@string/exit"
            android:id="@+id/btnExit"
            android:textSize="@dimen/boton" />
    </LinearLayout>
</RelativeLayout>

